# Dragon

./: .gitignore  CMakeLists.txt  README.md  c_flag_overrides.cmake  cmake_vs14.bat  cmake_vs15.bat  cmake_vs2017.bat  cmake_vs2017_v15.bat  cmake_vs2019_v16.bat  cmake_xcode.bat
data/: 0.spo  1.spo  10.spo  2.spo  3.spo  4.spo  5.spo  6.spo  7.spo  8.spo  9.spo  control.spo  graphics.spo  loader.spo
data/pool/models/bridge/: bridge.cam  bridge.layer  bridge.lwo
data/pool/models/city/: city.cam  city.layer  city.lwo  city2.cam
data/pool/models/cylinder/: cylinder.layer  cylinder.lwo  cylinder.wings
data/pool/models/hypercube/: cube1cm.lwo  hypercube.layer  hypercube.lwo  hypercube.wings
data/pool/models/lamborgini/: body.3ds  body.mtl  car.dae  lamborgini.layer  lamborgini.lwo  lamborgini_2.lwo
data/pool/models/meter/: meter.lwo
data/pool/models/sphere/: sphere.layer  sphere.lwo
data/pool/models/torus/: torus.shader
data/pool/shaders/merge/: fragment.txt  vertex.txt
dependencies/vc141/fmod10903/lowlevel/examples/vs2010/: 3d.vcxproj  asyncio.vcxproj  channel_groups.vcxproj  convolution_reverb.vcxproj  dsp_effect_per_speaker.vcxproj  fmod_gain.vcxproj  fmod_noise.vcxproj  gapless_playback.vcxproj  granular_synth.vcxproj  multiple_system.vcxproj  net_stream.vcxproj  record.vcxproj  record_enumeration.vcxproj  user_created_sound.vcxproj
dependencies/vc141/fmod10903/lowlevel/examples/vs2012/: dsp_inspector.vcxproj  effects.vcxproj  examples.sln  fmod_codec_raw.vcxproj  fmod_gain.vcxproj  gapless_playback.vcxproj  granular_synth.vcxproj  load_from_memory.vcxproj  multiple_speaker.vcxproj  net_stream.vcxproj  play_sound.vcxproj  play_stream.vcxproj  user_created_sound.vcxproj
dependencies/vc141/fmod10903/studio/examples/vs2010/: 3d.vcxproj  examples.sln  objectpan.vcxproj  programmer_sound.vcxproj  recording_playback.vcxproj
dependencies/vc141/fmod10903/studio/examples/vs2012/: 3d_multi.vcxproj  event_parameter.vcxproj  examples.sln  load_banks.vcxproj  recording_playback.vcxproj  simple_event.vcxproj
dependencies/vc141/fmod10903/studio/lib/: fmodstudio64_vc.lib  fmodstudioL_vc.lib
dependencies/vc141/glew-2.1.0/lib/Debug/Win32/: glew32d.exp  glew32sd.lib
dependencies/vc141/glew-2.1.0/lib/Debug/x64/: glew32d.exp  glew32sd.lib
dependencies/vc141/glew-2.1.0/lib/Release/Win32/: glew32.exp  glew32s.lib
dependencies/vc141/glew-2.1.0/lib/Release/x64/: glew32.exp  glew32s.lib
dependencies/vs/fmod10903/fsbank/lib/: fsbank64_vc.lib  fsbank_vc.lib
dependencies/vs/fmod10903/lowlevel/examples/vs2010/: dsp_custom.vcxproj  dsp_inspector.vcxproj  effects.vcxproj  examples.sln  fmod_codec_raw.vcxproj  fmod_distance_filter.vcxproj  generate_tone.vcxproj  load_from_memory.vcxproj  multiple_speaker.vcxproj  output_mp3.vcxproj  play_sound.vcxproj  play_stream.vcxproj
dependencies/vs/fmod10903/lowlevel/examples/vs2012/: 3d.vcxproj  asyncio.vcxproj  channel_groups.vcxproj  convolution_reverb.vcxproj  dsp_custom.vcxproj  dsp_effect_per_speaker.vcxproj  fmod_distance_filter.vcxproj  fmod_noise.vcxproj  generate_tone.vcxproj  multiple_system.vcxproj  output_mp3.vcxproj  record.vcxproj  record_enumeration.vcxproj
dependencies/vs/fmod10903/studio/examples/vs2010/: 3d_multi.vcxproj  event_parameter.vcxproj  load_banks.vcxproj  music_callbacks.vcxproj  simple_event.vcxproj
dependencies/vs/fmod10903/studio/examples/vs2012/: 3d.vcxproj  music_callbacks.vcxproj  objectpan.vcxproj  programmer_sound.vcxproj
dependencies/vs/fmod10903/studio/lib/: fmodstudioL64_vc.lib  fmodstudio_vc.lib
dependencies/vs/glew-2.0.0/lib/Debug/Win32/: glew32d.exp  glew32d.lib  glew32sd.lib
dependencies/vs/glew-2.0.0/lib/Debug/x64/: glew32d.exp  glew32d.lib  glew32sd.lib
dependencies/vs/glew-2.0.0/lib/Release/Win32/: glew32.exp  glew32.lib  glew32s.lib
dependencies/vs/glew-2.0.0/lib/Release/x64/: glew32.exp  glew32.lib  glew32s.lib
sources/: CMakeLists.txt  main.c  main.h
sources/core/: 3dsdraw.c  3dsdraw.h  3dsload.c  boxblur.c  boxblur.h  camera.c  cubemap.c  debug.c  dkernel.c  dkernel.cpp  dkernel.h  fbo.c  fbo.h  files.c  getopt.h  glslshader.c  glslshader.h  highpassfilter.c  layers.c  lwoload.c  math3d.c  mouse.c  mouse.h  particle.c  pickcam.c  skybox.c  spz_dbg_break.h  spz_message_box.c  spz_message_box.h  spzmessagebox.c  spzmessagebox.h  text.c  text.h  texture.c  texture.h  viewport.cpp
sources/core/drivers/: bassdriver.c  bassdriver.h  events.c  events.h  exprevaldriver.c  fmoddriver.c  fmoddriver.h  gldriver.c  gldriver.h  netdriver.c  netdriver.h
sources/effects/: efxAccum.c  efxBoxBlur.c  efxGlow.c  efxGlow2.c  efxHighPassFilter.c  efxRadialBlur2.c
sources/expreval/: exprmem.c  exprmem.h
sources/interface/: sections.h
sources/net2/: SDLUtils.c  SDLUtils.h  client.cpp  fastevents.c  fastevents.h  net2.c  net2.h  net2sets.c  net2sets.h  server.cpp  tc.cpp  ts.cpp  tus.cpp  uc.cpp  us.cpp
sources/sections/: background.c  beatDetect.c  cameraSection.c  cameraSection2.c  cameraSection3.c  glslshaderbind.c  glslshaderquad.c  glslshaderunbind.c  image.c  image2.c  image2D.c  imageMatrix.c  imagePart.c  loading.c  objectMatrix.c  objectMorph2.c  objectShader.c  objectShader2.c  particleMatrix2.c  particleMatrix3.c  particleTex2.c  rayMatrix.c  renderBuffer.c  renderFbo.c  renderShadowMapping.c  sound.c  sound.cpp  video.c
